Button and InputField implemented

--- a/lib/ui/build.gradle
+++ b/lib/ui/build.gradle
@@ -54,5 +54,7 @@ dependencies {
     implementation libs.hiltAndroid
     kapt libs.daggerHiltCompiler
 
+    implementation libs.bundles.coil
+
     implementation libs.androidMaterial
 }
