--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,6 +83,7 @@ android {
 dependencies {
     implementation project(':lib:ui')
     implementation project(':lib:domain')
+    implementation project(':lib:data')
     implementation project(':features:auth')
     implementation project(':features:home')
 
