--- a/features/home/build.gradle
+++ b/features/home/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.jetbrains.kotlin.android'
     id 'com.google.dagger.hilt.android'
     id 'kotlin-kapt'
+    id 'com.google.devtools.ksp'
 }
 
 android {
@@ -44,7 +45,10 @@ dependencies {
     implementation libs.bundles.androidx
     implementation libs.bundles.compose
     implementation libs.hiltAndroid
+    implementation libs.roomRuntime
+    implementation libs.roomKtx
     kapt libs.daggerHiltCompiler
+    ksp libs.roomCompiler
 
     def composeBom = platform(libs.compose.bom)
     implementation composeBom
