Emotion Insertion Implemented

--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,7 @@ plugins {
     alias(libs.plugins.kotlin.jvm) apply false
     alias(libs.plugins.dagger.hilt) apply false
     alias(libs.plugins.detekt.plugin) apply false
-    id 'com.google.devtools.ksp' version '1.9.0-1.0.13' apply false // todo: fix this version
+    alias(libs.plugins.devtools.ksp) apply false
 }
 subprojects {
     afterEvaluate {
