--- a/lib/ui/build.gradle
+++ b/lib/ui/build.gradle
@@ -41,6 +41,7 @@ dependencies {
 
     implementation libs.bundles.androidx
     implementation libs.bundles.compose
+    implementation libs.bundles.graph
 
     def composeBom = platform(libs.compose.bom)
     implementation composeBom
